# PyImageTrack

./: .gitignore  README.md  pyproject.toml
configs/: cachi_rg_11.toml  cachi_rg_13.toml  colorado_landslide.toml  drone_hs.toml  drone_hs_osttirol.toml  example_config.toml  glaciares_daniel_2004.toml  glaciares_daniel_newer.toml  glorerhuette_solifluction.toml  hohetauern_landslide.toml  morenas_dem.toml  morenas_re.toml  morenas_step.toml  sicily.toml  sicily_newer.toml  sicily_older.toml  smoketest_drone_hs.toml  test_georeferenced_hillshades.toml  timelapse_fake_ortho.toml
docs/: absolute_beginner_installation.md  pyimagetrack_documentation.md
src/PyImageTrack/: Cache.py  Utils.py  __init__.py  run_pipeline.py
src/PyImageTrack/CreateGeometries/: DepthImageConversion.py  HandleGeometries.py
src/PyImageTrack/DataProcessing/: DataPostprocessing.py  ImagePreprocessing.py
src/PyImageTrack/ImageTracking/: AlignImages.py  ImagePair.py  TrackMovement.py
src/PyImageTrack/Parameters/: AlignmentParameters.py  FilterParameters.py  TrackingParameters.py
src/PyImageTrack/Plots/: MakePlots.py
